# Analytics_with_apachespark_and-cassandra

./: .gitignore  README.md  cassandra.yaml  docker-compose.yml  main.py  pyproject.toml
api/: cache.py  database.py  main.py  requirements.txt
api/routes/: customers.py  products.py  top.py
etl_to_cassandra/: 01_schema.cql_explain  load_putput.txt  main.py  proccess_csv.ipynb
