[project]
name = "apache-spark-cassandra-hw7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cassandra-driver>=3.30.0",
    "fastapi>=0.136.1",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.5",
]
